--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "phpoffice/phpexcel": "^1.8",
         "kartik-v/yii2-icons": "@dev",
         "kartik-v/yii2-widget-datetimepicker": "dev-master",
-        "kartik-v/yii2-widgets": "dev-master"
+        "kartik-v/yii2-widgets": "dev-master",
+        "kartik-v/yii2-grid": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
